--- a/app/src/main/res/layout/fragment_change_email.xml
+++ b/app/src/main/res/layout/fragment_change_email.xml
@@ -99,6 +99,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/returnV"
+        android:background="@drawable/button_default"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:layout_marginTop="82dp"
         android:layout_marginStart="45dp"
         android:backgroundTint="@color/topMenuHome"
@@ -112,6 +115,9 @@
         android:layout_height="wrap_content"
         android:text="@string/confirm"
         android:layout_marginEnd="45dp"
+        android:background="@drawable/button_default"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:backgroundTint="@color/topMenuHome"
         app:layout_constraintTop_toTopOf="@+id/btReturn"
         app:layout_constraintEnd_toEndOf="parent"/>
