--- a/app/src/main/res/layout/favorites.xml
+++ b/app/src/main/res/layout/favorites.xml
@@ -8,62 +8,46 @@
     android:elevation="5dp"
     android:padding="5dp"
     android:id="@+id/favoritesContainer"
-    app:cardCornerRadius="20dp"
+    app:cardCornerRadius="30dp"
     android:background="@drawable/gradiente">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="180dp"
+        android:layout_width="150dp"
         android:layout_height="300dp"
         android:background="@drawable/gradiente_externo">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/fotoFilme"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="240dp"
             android:clickable="true"
             android:focusable="true"
             android:scaleType="centerCrop"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            />
-
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/filmeName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:fontFamily="@font/rubik_bold"
-            android:gravity="center"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/fotoFilme"
             app:layout_constraintBottom_toTopOf="@+id/removeFavorite"
-            tools:text="Título do Filme" />
-
-
-
+            />
         <Button
             android:id="@+id/removeFavorite"
-            android:layout_width="90dp"
-            android:layout_height="50dp"
+            android:layout_width="75dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:fontFamily="@font/rubik_light"
-            android:gravity="center"
             android:textSize="10sp"
             android:textStyle="bold"
-            android:text="Remover"
+            android:background="@drawable/button_default"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:text="@string/removeFavorites"
             app:backgroundTint="@color/tabtextColorNEW"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/filmeName"
+            app:layout_constraintTop_toBottomOf="@id/fotoFilme"
+            app:layout_constraintBottom_toBottomOf="parent"
 
-             />
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
