--- a/app/src/main/res/layout/fragment_confirmation_email.xml
+++ b/app/src/main/res/layout/fragment_confirmation_email.xml
@@ -69,6 +69,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="32dp"
+        android:background="@drawable/button_default"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         android:backgroundTint="@color/topRatedButton"
         android:text="@string/voltar_para_a_home"
         />
