--- a/app/src/main/res/layout/fragment_favorites_movies.xml
+++ b/app/src/main/res/layout/fragment_favorites_movies.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradiente"
+    android:background="@drawable/gradiente_externo"
     tools:context=".ui.fragments.favorites.view.FavoritesMoviesFragment">
 
 
@@ -29,14 +29,16 @@
         <FrameLayout
             android:id="@+id/birdMovies"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
-            android:visibility="gone">
+            android:layout_height="500dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"
+            >
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="80dp"
                 android:fontFamily="@font/rubik_bold"
                 android:src="@drawable/undraw_happy_music"
 
