--- a/app/src/main/res/layout/fragment_favorites_series.xml
+++ b/app/src/main/res/layout/fragment_favorites_series.xml
@@ -27,14 +27,15 @@
         <FrameLayout
             android:id="@+id/birdSeries"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
+            android:layout_height="500dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:visibility="gone">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="80dp"
                 android:fontFamily="@font/rubik_bold"
                 android:src="@drawable/undraw_happy_music"
 
@@ -42,7 +43,6 @@
         </FrameLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </ScrollView>
