--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    android:background="@drawable/gradiente"
+    android:background="@drawable/gradiente_externo"
     >
 
 
@@ -38,35 +38,25 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-<!--        <androidx.viewpager.widget.ViewPager-->
-<!--            android:id="@+id/viewPagerHome"-->
-<!--            style="@style/WatchCardDefault"-->
-<!--            android:layout_width="380dp"-->
-<!--            android:layout_height="300dp"-->
-<!--            android:layout_marginTop="70dp"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/imageTopRated"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            tools:src="@drawable/tipsimageone" />-->
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/loadingLottieHome"
+            android:layout_width="300dp"
+            android:layout_height="311dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:lottie_rawRes="@raw/loadingcard"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            />
 
-<!--        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator-->
-<!--            android:id="@+id/dots_indicatorHome"-->
-<!--            android:layout_width="120dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_margin="5dp"-->
-<!--            app:dotsColor="@color/dotsTips1"-->
-<!--            app:dotsCornerRadius="8dp"-->
-<!--            app:dotsSize="16dp"-->
-<!--            app:dotsSpacing="4dp"-->
-<!--            app:dotsWidthFactor="2.5"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/viewPagerHome"-->
-<!--            app:progressMode="true"-->
-<!--            app:selectedDotColor="@color/dotsTips2"-->
-
-<!--            />-->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/layoutRecycleMain"
+            android:visibility="gone"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" >
 
         <ImageView
             android:id="@+id/imageTopRated"
@@ -76,7 +66,7 @@
             android:src="@drawable/top"
             app:layout_constraintBottom_toTopOf="@id/filmesRecyclerView"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/filmesRecyclerView"
@@ -123,6 +113,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/imagePopular"
             tools:listitem="@layout/films" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
