--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -78,6 +78,9 @@
         android:fontFamily="@font/rubik_bold"
         android:text="@string/login"
         android:textStyle="bold"
+        android:background="@drawable/button_default"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
         app:backgroundTint="@color/tabtextColorNEW"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
