--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -49,16 +49,19 @@
             android:text="@string/changepicture"
             android:textSize="11sp"
             android:textStyle="bold"
+            android:background="@drawable/button_default"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             app:backgroundTint="@color/button"
             app:layout_constraintEnd_toEndOf="@+id/pictureProfile"
             app:layout_constraintStart_toStartOf="@+id/pictureProfile"
             app:layout_constraintTop_toBottomOf="@+id/pictureProfile" />
 
-        <TextView
-            android:id="@+id/profileConfig"
+         <TextView
+            android:id="@+id/profilePassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/profileDetails"
+            android:text="@string/profileDetailsPassword"
             android:textColor="@color/black"
             android:layout_marginTop="20dp"
             android:textSize="18sp"
@@ -67,15 +70,15 @@
             app:layout_constraintTop_toBottomOf="@+id/changePictureProfile" />
 
         <TextView
-            android:id="@+id/profileDescription"
+            android:id="@+id/profileDescriptionPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/profileDetails"
+            android:text="@string/profileDetailsPasswordSubtitle"
             android:textColor="@color/black"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profileConfig" />
+            app:layout_constraintTop_toBottomOf="@id/profilePassword" />
 
         <ImageView
             android:id="@+id/chevronRight"
@@ -83,15 +86,16 @@
             android:layout_height="wrap_content"
             android:contentDescription="@string/icone_seta_direita"
             android:src="@drawable/outline_chevron_right_24"
-            app:layout_constraintBottom_toBottomOf="@+id/profileConfig"
+            app:layout_constraintBottom_toBottomOf="@+id/profilePassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.876"
-            app:layout_constraintStart_toEndOf="@+id/profileConfig" />
+            app:layout_constraintStart_toEndOf="@+id/profilePassword" />
 
         <com.google.android.material.divider.MaterialDivider
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/profileDescription"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/profileDescriptionPassword"
             />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
