--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -24,6 +24,9 @@
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
+            android:background="@drawable/button_default"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:fontFamily="@font/rubik_bold"
             android:text="@string/cadastrar"
             android:textStyle="bold" />
